[FIX] sap.m.Dialog: Header text alignement is now fixed in compact mode
SNOW: DINC0861363

--- a/src/sap.m/src/sap/m/themes/base/Dialog.less
+++ b/src/sap.m/src/sap/m/themes/base/Dialog.less
@@ -283,6 +283,8 @@ html.sap-desktop .sapMDialog {
 			.sapMHeader-CTX,
 			.sapMSubHeader-CTX {
 				height: @_sap_m_Dialog_BarCompactHeight;
+				padding-top: 0.25rem;
+				padding-bottom: 0.25rem;
 				box-sizing: border-box;
 			}
 		}
